[package]
name = "meterbus-wired-datalink-wasm"
version = "0.1.0"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.82"
meterbus-wired-datalink = { path = "../meterbus-wired-datalink", features = ["alloc"] }
wasm-bindgen = "=0.2.105"

[lints]
workspace = true
